$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-8 (opened July 19, 2010)

	DEPENDENCE: does not suggest package 'ellipse'.

	plot.MOStest: uses veganCovEllipse instead of
	ellipse:::ellipse.glm. 

Version 1.18-7 (closed July 19, 2010)

	* new version opened with the release of vegan_1.17-3.

	* veganCovEllipse: new internal for drawing covariance ellipses
	(to be used both with ordiellipse() and plot.MOStest()).

	* ordiellipse: uses veganCovEllipse.
	
Version 1.18-6 (closed June 16, 2010)

	* Version 1.18-6 closed simultaneously with the release of
	vegan_1.17-3 on June 16, 2010).

	* mantel, mantel.partial: considerable speed up by cleaning
	innermost loop and replacing as.dist() with direct extraction of
	lower diagonal.

	* treedist: documenting tree dissimilarity function that has been
	in vegan devel since Aug 17, 2009 (rev928).

	* betadisper: 'type = "median"', the default, was not computing
	the spatial median on the real and imaginary axes separately.
	Reported by Marek Omelka.

	* permutations: First attempt to document within Vegan the general
	workings of permutation tests. See ?permutations for details.

Version 1.18-5 (closed May 31, 2010)

	* cca, rda: plot() failed if Condition() had factors, but
	constraints had no factors. An example of failure:

	m <- cca(dune ~ A1 + Condition(Management), dune.env)
	plot(m) ## failed

	* ordiarrows: gained 'label' argument which uses ordilabel() on
	arrow starts.

	* ordisegments: gained 'label' argument which uses ordilabel() on
	both ends of the segment.

	* ordispider: gained 'label' argument (uses ordilabel()). Can now
	handle ordihull() result objects: connects points in the line to
	the hull centroid. Extended examples.
	
	* ordiR2step: new function to perform forward model selection
	following Blanchet, Legendre & Borcard (Ecology 89, 2623-2632;
	2008) or by adjusted R2 until the adjusted R2 of the full model
	(scope) is exceeded or adjusted R2 starts to decrease.
